@@ -34,6 +34,50 @@ $config = $this->container->appConfig;
             </div>
         </div>
 
+        {{--mfa_superuser--}}
+        <div class="row mb-3">
+            <div class="col-sm-9 offset-sm-3">
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" name="options[mfa_superuser]" id="mfa_superuser" value="1"
+                            {{ $config->get('mfa_superuser', false) ? 'checked' : '' }}
+                    >
+                    <label class="form-check-label" for="mfa_superuser">
+                        @lang('PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_SUPERUSER')
+                    </label>
+                </div>
+            </div>
+        </div>
 
+        {{--mfa_admin--}}
+        <div class="row mb-3">
+            <div class="col-sm-9 offset-sm-3">
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" name="options[mfa_admin]" id="mfa_admin" value="1"
+                            {{ $config->get('mfa_admin', false) ? 'checked' : '' }}
+                    >
+                    <label class="form-check-label" for="mfa_admin">
+                        @lang('PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_ADMIN')
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        {{--mfa_force_groups--}}
+        <div class="row mb-3">
+            <label for="mfa_force_groups" class="col-sm-3 col-form-label">
+                @lang('PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_FORCE_GROUPS')
+            </label>
+            <div class="col-sm-9">
+                {{ $this->container->html->select->genericList(
+                    data: $this->getModel()->getGroupsForSelect(includeEmpty: false),
+                    name: 'mfa_force_groups[]',
+                    attribs: [
+                        'class' => 'form-select js-choice',
+                        'multiple' => 'multiple',
+                    ],
+                    selected: $config->get('mfa_force_groups', [])
+                ) }}
+            </div>
+        </div>
     </div>
 </div>
