@@ -1446,6 +1446,10 @@ PANOPTICON_SYSCONFIG_LBL_EMAILTEST_SENT="The test email was sent successfully"
 PANOPTICON_SYSCONFIG_LBL_EMAILTEST_NOT_SENT="The test email could not be sent. The last error reported was: %s"
 PANOPTICON_SYSCONFIG_LBL_EMAILTEST_IS_DISABLED="You have disabled Mail Sending; no email will be sent."
 
+PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_SUPERUSER="Force MFA for Superusers"
+PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_ADMIN="Force MFA for Administrators"
+PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_FORCE_GROUPS="Force MFA for these Groups"
+
 [Tasks]
 PANOPTICON_TASKS_TITLE="Tasks"
 PANOPTICON_TASKS_LBL_FIELD_SITE_ID="Site"
@@ -1596,6 +1600,10 @@ PANOPTICON_USERS_LBL_FIELD_MAIN_LAYOUT="Sites Overview Layout"
 PANOPTICON_USERS_LBL_FIELD_MAIN_LAYOUT_OPT_DEFAULT="Table"
 PANOPTICON_USERS_LBL_FIELD_MAIN_LAYOUT_OPT_DASHBOARD="Dashboard"
 PANOPTICON_USERS_LBL_FIELD_MAIN_LAYOUT_HELP="The Dashboard layout is simpler to understand, but uses more browser resources."
+
+PANOPTICON_USERS_LBL_FORCED_MFA_NEEDED="You must set up Multi-factor Authentication to be allowed further access to this application."
+PANOPTICON_USERS_LBL_FORCED_MFA_COMPLETE="You can now click on the Cancel button in the toolbar to return to the application."
+
 
 [About]
 PANOPTICON_ABOUT_TITLE="About"
