@@ -15,6 +15,8 @@ use Exception;
 
 trait MFATrait
 {
+	private $mfaAllowedViews = ['cron', 'captive', 'mfamethods', 'login', 'logout'];
+
 	/**
 	 * Does the user need to complete MFA authentication before being allowed to access the site?
 	 *
@@ -100,12 +102,133 @@ trait MFATrait
 		// Always allow access to the cron, captive, MFA method select, login, and logout pages
 		$view = strtolower(Factory::getContainer()->input->get('view', 'main'));
 
-		if (in_array($view, ['cron', 'captive', 'mfamethods', 'login', 'logout']))
+		if (in_array($view, $this->mfaAllowedViews))
 		{
 			return false;
 		}
 
 		// Everything else will be redirected to the MFA captive page
+		return true;
+	}
+
+	/**
+	 * Does the user need to add any new MFA records to have at least one valid record?
+	 *
+	 * @param   null|User  $user  The user object
+	 *
+	 * @return  bool
+	 * @throws  Exception
+	 */
+	public function userNeedsMFARecords(?User $user = null): bool
+	{
+		static $records = null, $lastUserId = null;
+
+		$user ??= Factory::getContainer()->userManager->getUser();
+
+		if (empty($user) || empty($user->getId()))
+		{
+			// Guest cannot have MFA
+			return false;
+		}
+
+		if ($lastUserId != $user->getId())
+		{
+			$lastUserId = $user->getId();
+			$records    = Helper::getUserMfaRecords($this->getContainer(), $user->getId());
+		}
+
+		// No MFA Methods?
+		if (count($records) < 1)
+		{
+			return true;
+		}
+
+		// Let's get a list of all currently active MFA Methods
+		$mfaMethods = Helper::getMfaMethods();
+
+		// If no MFA Method is active we can't really display a Captive login page.
+		if (empty($mfaMethods))
+		{
+			return false;
+		}
+
+		// Get a list of just the Method names
+		$methodNames = [];
+
+		foreach ($mfaMethods as $mfaMethod)
+		{
+			$methodNames[] = $mfaMethod->name;
+		}
+
+		// The user will need a new MFA record if no existing record uses a valid MFA method.
+		return !array_reduce(
+			$records,
+			fn(bool $carry, object $record) => $carry || in_array($record->method, $methodNames),
+			false
+		);
+	}
+
+	private function needsMFAForcedSetup(): bool
+	{
+		// If the user has already set up MFA they don't need to, um, set up MFA. Makes sense.
+		if (!$this->userNeedsMFARecords())
+		{
+			return false;
+		}
+
+		// If the user is not logged in they cannot set up MFA.
+		$user = Factory::getContainer()->userManager->getUser();
+
+		if (empty($user) || empty($user->getId()))
+		{
+			return false;
+		}
+
+		// Is the user a Superuser and mfa_superuser enabled?
+		$appConfig   = $this->getContainer()->appConfig;
+		$criterion1      = $appConfig->get('mfa_superuser', false) &&
+			$user->getPrivilege('panopticon.super');
+
+		// Is the user an Administrator and mfa_admin enabled?
+		$criterion2      = $appConfig->get('mfa_admin', false) &&
+			$user->getPrivilege('panopticon.admin');
+
+		// Is the user in one of the forced MFA groups?
+		$forcedMFAGroups = $appConfig->get('mfa_force_groups', []);
+		$forcedMFAGroups = is_array($forcedMFAGroups) ? array_values($forcedMFAGroups) : [];
+		$userGroups      = $user->getParameters()->get('usergroups', []);
+		$userGroups      = is_array($userGroups) ? array_values($userGroups) : [];
+		$intersection    = array_intersect($forcedMFAGroups, $userGroups);
+		$criterion3 = !empty($forcedMFAGroups) && !empty($userGroups) && !empty($intersection);
+
+		// If none of the above criteria is met we don't need to redirect the user
+		if (!$criterion1 && !$criterion2 && !$criterion3)
+		{
+			return false;
+		}
+
+		// If we are in an MFA-transparent view we won't redirect.
+		$view = strtolower(Factory::getContainer()->input->get('view', 'main'));
+
+		if (in_array($view, $this->mfaAllowedViews))
+		{
+			return false;
+		}
+
+		// Allow the view where the user sets up new MFA methods
+		if ($view === 'mfamethod')
+		{
+			return false;
+		}
+
+		// If we are already in the user edit, save, or apply task we return false to prevent a redirect loop.
+		$task = strtolower(Factory::getContainer()->input->get('task', 'main'));
+
+		if (($view === 'users' || $view === 'user') && in_array($task, ['edit', 'apply', 'save']))
+		{
+			return false;
+		}
+
 		return true;
 	}
 
