@@ -38,9 +38,6 @@ use Exception;
 use GuzzleHttp\Exception\RequestException;
 use GuzzleHttp\Promise\Utils;
 use GuzzleHttp\RequestOptions;
-use Iodev\Whois\Exceptions\ConnectionException;
-use Iodev\Whois\Exceptions\ServerMismatchException;
-use Iodev\Whois\Exceptions\WhoisException;
 use Iodev\Whois\Factory as WhoisFactory;
 use Iodev\Whois\Loaders\CurlLoader;
 use Psr\Cache\CacheException;
