@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.2.3
 ================================================================================
 + Domain registration and expiration warnings
++ Force MFA for specific user groups, superusers, or administrators
 # [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)
 # [HIGH] Cannot connect to old Akeeba Backup for WordPress (version 7)
 # [HIGH] PHP error when WordPress fails to provide version information
